small button changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img id="overlay-image" src="notarobot.png" alt="Overlay" />
     <div>
         <button id="clear">Clear</button>
-        <button id="predict">Predict</button>
+        <button id="predict">Validate</button>
     </div>
     <div id="result"></div>
 
